---
source: tests-integration/tests/lsp.rs
expression: report
---
Hover at Position { line: 6, character: 6 }

Hover {
    contents: Array(
        [
            LanguageString(
                LanguageString {
                    language: "purescript",
                    value: "life :: Int",
                },
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 17, character: 6 }

Hover {
    contents: Array(
        [
            LanguageString(
                LanguageString {
                    language: "purescript",
                    value: "life :: Int",
                },
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 17, character: 12 }

Hover {
    contents: Array(
        [],
    ),
    range: None,
}


Hover at Position { line: 22, character: 9 }

Hover {
    contents: Array(
        [
            String(
                "---",
            ),
            String(
                "--    $     $",
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 24, character: 8 }

Hover {
    contents: Array(
        [
            LanguageString(
                LanguageString {
                    language: "purescript",
                    value: "Just a",
                },
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 27, character: 12 }

Hover {
    contents: Array(
        [
            String(
                "---",
            ),
            String(
                "--    $     $",
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 29, character: 11 }

Hover {
    contents: Array(
        [
            LanguageString(
                LanguageString {
                    language: "purescript",
                    value: "Nothing",
                },
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 34, character: 3 }

Hover {
    contents: Array(
        [
            LanguageString(
                LanguageString {
                    language: "purescript",
                    value: "Just a",
                },
            ),
        ],
    ),
    range: None,
}


Hover at Position { line: 37, character: 3 }

Hover {
    contents: Array(
        [
            LanguageString(
                LanguageString {
                    language: "purescript",
                    value: "Nothing",
                },
            ),
        ],
    ),
    range: None,
}
